--- a/ArgCore/Views/Research/Index.cshtml
+++ b/ArgCore/Views/Research/Index.cshtml
@@ -363,7 +363,7 @@
                                         <label for="inputUrl" class="mylabel control-label col-md-3">BOL date between</label>
                                         <div class="col-md-5 dateBlock">
                                             <div class="col-md-5">
-                                                @Html.TextBoxFor(x => x.SearchOptions.BolExecutionStartDate, null, new { @class = "form-control BDDatepicker", , data_val_required = "false" })
+                                                @Html.TextBoxFor(x => x.SearchOptions.BolExecutionStartDate, null, new { @class = "form-control BDDatepicker", data_val_required = "false" })
                                             </div>
                                             <label class="col-md-2">and</label>
                                             <div class="col-md-5">
